--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "server:watch": "nodemon backend",
+    "server:start": "node backend/app.js",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -12,14 +14,28 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.6",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
     "@angular/forms": "~10.0.6",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "angular-stl-model-viewer": "^1.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "helmet": "^4.0.0",
+    "mongoose": "^5.9.28",
+    "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
+    "three": "^0.119.1",
+    "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -27,10 +43,12 @@
     "@angular-devkit/build-angular": "~0.1000.5",
     "@angular/cli": "~10.0.5",
     "@angular/compiler-cli": "~10.0.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.54",
+    "@types/three": "^0.103.2",
     "codelyzer": "^6.0.0",
+    "concurrently": "^5.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -38,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nodemon": "^2.0.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
