--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^4.0.0",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "rxjs": "~6.5.5",
     "three": "^0.119.1",
     "three-orbit-controls": "^82.1.0",
