--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.6",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.6",
@@ -32,6 +33,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "flex-layout": "^1.0.1",
     "helmet": "^4.0.0",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
