--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "express-async-handler": "^1.1.4",
     "flex-layout": "^1.0.1",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.5.5",
     "three": "^0.119.1",
     "three-orbit-controls": "^82.1.0",
