--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@auth0/angular-jwt": "^5.0.1",
     "angular-router-loader": "^0.8.5",
     "angular-stl-model-viewer": "^1.0.0",
     "bcrypt": "^5.0.0",
@@ -37,12 +38,15 @@
     "flex-layout": "^1.0.1",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.8.1",
+    "request": "^2.88.2",
     "rxjs": "~6.5.5",
     "three": "^0.119.1",
     "three-orbit-controls": "^82.1.0",
