--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/router": "~10.0.6",
     "@auth0/angular-jwt": "^5.0.1",
     "@paypal/checkout-server-sdk": "^1.0.2",
+    "@progress/kendo-file-saver": "^1.1.0",
+    "@types/file-saver": "^2.0.1",
     "angular-router-loader": "^0.8.5",
     "angular-stl-model-viewer": "^1.0.0",
     "bcrypt": "^5.0.0",
@@ -36,13 +38,18 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "file-saver": "^2.0.2",
     "flex-layout": "^1.0.1",
     "helmet": "^4.0.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.5.0",
+    "jszip-utils": "^0.1.0",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
