Fixed server for first deploy

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@progress/kendo-file-saver": "^1.1.0",
     "angular-router-loader": "^0.8.5",
     "angular-stl-model-viewer": "^1.0.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
