--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "npm": "^6.14.8",
+    "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
