--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "npm": "^6.14.8",
+    "nylas": "^5.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
