--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,10 @@
-NODE_ENV = development
-PORT = 4050
+NODE_ENV = production
+MONGODB_URI = 
+MONGO_DEBUG = 
+JWT_SECRET = 
+EXPIRES_IN = 
+PAYPAL_SECRET = 
+PAYPAL_CLIENT = 
+S3_ACCESS_ID = 
+S3_SECRET_ACCESS_SECRET = 
+S3_BUCKET_NAME = 
