--- a/package.json
+++ b/package.json
@@ -29,17 +29,21 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@paypal/checkout-server-sdk": "^1.0.2",
     "@progress/kendo-file-saver": "^1.1.0",
+    "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "angular-router-loader": "^0.8.5",
     "angular-stl-model-viewer": "^1.0.0",
+    "aws-sdk": "^2.836.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "file-saver": "^2.0.2",
     "flex-layout": "^1.0.1",
-    "helmet": "^4.0.0",
+    "helmet": "^4.4.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "jszip": "^3.5.0",
@@ -48,6 +52,7 @@
     "mongoose": "^5.9.28",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.11",
     "npm": "^6.14.8",
     "nylas": "^5.2.0",
@@ -61,6 +66,7 @@
     "three-orbit-controls": "^82.1.0",
     "three-stl-loader": "^1.0.6",
     "tslib": "^2.0.0",
+    "uuid": "^3.4.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -83,8 +89,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "nodemon": "^2.0.4",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "^3.9.7"
   }
 }
