--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
+src.zip
 
 # dependencies
 /node_modules
@@ -22,6 +23,7 @@ speed-measure-plugin*.json
 *.launch
 .settings/
 *.sublime-workspace
+.VScodeCounter
 
 # IDE - VSCode
 .vscode/*
