--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@progress/kendo-file-saver": "^1.1.0",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
+    "angular-responsive-carousel": "^2.0.2",
     "angular-router-loader": "^0.8.5",
     "angular-stl-model-viewer": "^1.0.0",
     "aws-sdk": "^2.836.0",
