--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@auth0/angular-jwt": "^5.0.1",
+    "@ngbmodule/material-carousel": "^0.7.1",
+    "@ngmodule/material-carousel": "^0.6.0",
     "@paypal/checkout-server-sdk": "^1.0.2",
     "@progress/kendo-file-saver": "^1.1.0",
     "@types/express": "^4.17.11",
