--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "concurrently": "^5.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jsdoc": "^3.6.6",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
