--- a/package.json
+++ b/package.json
@@ -2,12 +2,30 @@
   "name": "printing-site",
   "version": "0.0.0",
   "scripts": {
-    "start": "node backend/app.js",
+    "ng": "ng",
     "server:watch": "nodemon backend",
-    "server:start": "node backend/app.js"
+    "server:start": "node backend/app.js",
+    "start": "ng serve",
+    "build": "ng build",
+    "build:prod": "npm run build -- --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "debug": "nodemon --nolazy --inspect-brk=5252 backend"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.6",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.6",
+    "@angular/compiler": "~10.0.6",
+    "@angular/core": "~10.0.6",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "~10.0.6",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "~10.0.6",
+    "@angular/platform-browser-dynamic": "~10.0.6",
+    "@angular/router": "~10.0.6",
     "@auth0/angular-jwt": "^5.0.1",
     "@ngbmodule/material-carousel": "^0.7.1",
     "@ngmodule/material-carousel": "^0.6.0",
@@ -15,6 +33,9 @@
     "@progress/kendo-file-saver": "^1.1.0",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
+    "angular-responsive-carousel": "^2.0.2",
+    "angular-router-loader": "^0.8.5",
+    "angular-stl-model-viewer": "^1.0.0",
     "aws-sdk": "^2.836.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -44,11 +65,17 @@
     "paypal-rest-sdk": "^1.8.1",
     "request": "^2.88.2",
     "rxjs": "~6.5.5",
+    "three": "^0.119.1",
+    "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6",
     "tslib": "^2.0.0",
     "uuid": "^3.4.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler-cli": "~10.0.6",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -69,9 +96,5 @@
     "ts-node": "^8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^3.9.7"
-  },
-  "engines": {
-    "node": "14.15.5",
-    "npm": "6.14.11"
   }
 }
