--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "ngx-toastr": "^14.0.0",
     "nodemailer": "^6.4.11",
     "npm": "^6.14.8",
     "nylas": "^5.2.0",
